external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/named_struct_middle_autocomplete@ide.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03010]: unbound field
   ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:14:21
   │
14 │         let _tmp2 = _s.b.x;
   │                     ^^^^ Unbound field 'b' in 'a::m::B'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:14:23
   │
14 │         let _tmp2 = _s.b.x;
   │                       ^ Possible dot names: 'a'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:14:24
   │
14 │         let _tmp2 = _s.b.x;
   │                        ^ Possible dot names: 'a'
